Bug 4341 - Xming xwinrc customization does not work
Summary: Xming xwinrc customization does not work
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/DDX/Xwin (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-09-02 07:27 UTC by Colin Harrison
Modified: 2006-03-03 01:54 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch to spawn custom external processes from Xming taskbar (1.11 KB, patch)
2005-09-02 07:35 UTC, Colin Harrison
no flags Details | Splinter Review
Safer patch (1.16 KB, patch)
2005-10-10 03:19 UTC, Colin Harrison
no flags Details | Splinter Review
Make error message more meaningful (1.00 KB, patch)
2005-11-29 02:52 UTC, Colin Harrison
no flags Details | Splinter Review

Description Colin Harrison 2005-09-02 07:27:04 UTC
The taskbar customization feature via a xwinrc file does not work for Xming 
(works for cygwin/X).

i.e. when the tree is compiled:

make World CROSSCOMPILEDIR=/usr/local/cross-tools/i386-mingw32msvc/bin 
LOCAL_LDFLAGS=-mwindows
Comment 1 Colin Harrison 2005-09-02 07:35:39 UTC
Created attachment 3155 [details] [review]
Patch to spawn custom external processes from Xming taskbar
Comment 2 Colin Harrison 2005-09-02 07:39:35 UTC
See xc/programs/Xserver/hw/xwin/_usr_X11R6_lib_X11_system.XWinrc for how the 
control file is used to launch external processes.
Comment 3 Colin Harrison 2005-09-02 08:38:15 UTC
http://www.straightrunning.com/test/Xming.png shows a customized xwinrc taskbar 
in use (bottom right hand of this screen capture).
Comment 4 Colin Harrison 2005-10-10 03:19:31 UTC
Created attachment 3532 [details] [review]
Safer patch
Comment 5 Colin Harrison 2005-11-29 02:52:08 UTC
Created attachment 3927 [details] [review]
Make error message more meaningful
Comment 6 Colin Harrison 2005-12-19 08:05:11 UTC
MessageBox should be "Xmingrc Exec Command Error!" not "Mingrc Exec Command 
Error!" 
Comment 7 Alan Hourihane 2006-03-03 20:54:25 UTC
Applied. Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.