https://bugs.freedesktop.org/show_bug.cgi?id=4341 Make Xming error messages     more meaningful.